# rookie_lean

./: .geminiignore  .gitignore  AGENTS.md  GEMINI.md  README.md  RULE.md  lean.json  report.html  requirements.txt
AltcoinShort/: .gitignore  alpha.py  config.json  execution.py  main.py  risk.py  universe.py
AltcoinShort/docs/: factor_ic_analysis_report.md  prompt.md  strategy_performance_report_v3.md  strategy_performance_report_v3_cn.md
AltcoinShort/research/: csad_analysis.py  factor_ic_analysis.py  factor_ic_regime.py
BinanceBot/: main.py
PayoffAsymmetry/: main.py
ccxt_data_fetch/: AGENTS.md  GEMINI.md  README.md  __init__.py  __main__.py  binance_archive_downloader.py  cli.py  config.py  downloader.py  fetcher.py  pyproject.toml  run.py  run_depth.py  run_fetch.py  run_margin_interest.py  run_ohlcv.py  run_quote.py  test.ipynb  test_fetcher.py  test_load_depth_new.py  utils.py
ccxt_data_fetch/sample_data/crypto/: readme.md
ccxt_data_fetch/sample_data/cryptofuture/depth/: BTCUSDT-bookDepth-2026-02-10.csv
ccxt_data_fetch/scripts/: generate_sample_data.py
example/: .gitignore
preprocessors/: preprocess.py
qc_datafeed/: README.md  __init__.py
qc_datafeed/binance/: README.md  __init__.py  config.py  quotes.py  run_binance_fetch.py
qc_datafeed/polymarket/: polymarket_clob.py  polymarket_resolver.py
strategies/: GEMINI.md
strategies/AltcoinShort/: alpha.py  config.json  execution.py  main.py  portfolio.py
strategies/AltcoinShort/docs/: report.html
strategies/PayoffAsymmetry/: AGENTS.md  config.json  research.ipynb  research_script.py
(+20 files in other folders)
